--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,13 @@
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   background-size: cover;
   z-index: -1;
-
 }
 
-body{
+body {
   background-color: #e1e1e1;
+}
+
+/* Style pour désactiver le défilement */
+.overflow-hidden {
+  overflow: hidden;
 }
